# VariousApps

./: CMakeLists.txt  README.md
apps/: QueueApplication.cpp  analyzeDNA.cpp  analyzeECG.cpp  awesome_application.cpp  balanced_parentheses.cpp  basics.cpp  heron.cpp  memory.cpp  stock_span.cpp
data/data/: carl_sagan.txt
data/datasets/: genetic_data.txt
include/: LinkedList.hpp  Stack.hpp  arrays.hpp  dna.hpp  ecg.hpp  mathematics.hpp  queue.hpp
